<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="CarTrafficLight" Id="{937bb74f-8fa3-4ea3-85e7-c63a585c47b5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM CarTrafficLight
VAR
	StartTrafficLightTimer: BOOL := FALSE;
	DelayPedestrianLight: TIME;
	TimerTrafficLight: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF GVL.ButtonPedestrian AND NOT StartTrafficLightTimer THEN
	TimerTrafficLight( IN := GVL.ButtonPedestrian, PT := T#10S );
	StartTrafficLightTimer := TRUE;
	
ELSIF StartTrafficLightTimer AND TimerTrafficLight THEN
	IF GVL.CarLightGreen THEN
		GVL.CarLightGreen := FALSE;
		GVL.CarLightYellow := TRUE;
	ELSIF GVL.CarLightYellow THEN
		GVL.CarLightYellow := FALSE;
		GVL.CarLightRed:= TRUE;	
	END_IF

StartTrafficLightTimer := FALSE;
GVL.ButtonPedestrian := FALSE;	
END_IF]]></ST>
    </Implementation>
    <LineIds Name="CarTrafficLight">
      <LineId Id="5" Count="1" />
      <LineId Id="12" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="26" Count="2" />
      <LineId Id="23" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>